--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>WeatherAppAngular</title>
-  <base href="https://vladjl3.github.io/weather-app-angular">
+  <base href="https://vladjl3.github.io/weather-app-angular/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{margin:0;padding:0;height:100%}body{color:#fff;margin:0;font-family:Poppins,Helvetica Neue,sans-serif;font-weight:400;font-size:18px;background-attachment:fixed;background:rgb(157,114,255);background:radial-gradient(circle,rgb(49,164,189) 0%,rgb(233,200,148) 100%);background-size:100%;height:100%}</style><link rel="stylesheet" href="styles.a514567886b5b9e3.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a514567886b5b9e3.css"></noscript></head>
